# claude-code-knowledge-framework

./: .aider.tags.cache.v4  .gitignore  .mcp.json  .pre-commit-config.yaml  .taskmaster  CHANGELOG.md  CONTEXT_LIVE_TEST.md  FINAL_PROJECT_SUMMARY.md  LICENSE  README.md  SEMANTIC_SEARCH_SOLUTION.md  TASK3_INIT.md  comprehensive-quality-fix-completion-report.md  comprehensive_mcp_test.py  coverage.json  debug_mcp_test.py  docker-compose.load-test.yml  final-quality-enforcement-report.md  mkdocs.yml  orchestrated_quality_workflow.py  pixi-optimization-report.md  pixi.toml  pyproject.toml  python-static-analyzer-emergency-report.md  python-static-analyzer-report.md  quality-enforcement-report.md  quality_analysis_report.py  quality_orchestration_report.py  test_mcp_server.py  uckn_context_report.md  uckn_test.db
--help/.uckn/storage/: chroma.sqlite3
.aider/: chat_history.md
.claude/: settings.local.json
.claude/state/: ci_complete_fix.json  quality_complete_fix.json  quality_iteration.json  quality_manual_review.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  knowledge_pattern.md
.github/workflows/: README.md  ci-framework.yml  ci.yml  ci.yml.disabled  comprehensive-testing.yml  comprehensive-testing.yml.disabled  performance-testing.yml  performance-testing.yml.disabled  platform-validation.yml  pr-checks.yml  pr-checks.yml.disabled  quality-gates.yml  quality-metrics.yml  status.yml  status.yml.disabled  test-matrix.yml  test-matrix.yml.disabled  uckn-validation.yml
.recovery/: README.md  fallback_strategies.md  latest_checkpoint  recovery_protocols.sh  sub_agent_integration_template.sh
.recovery/checkpoints/ckpt_error-recovery-specialist_1753668190/: git_state.txt  metadata.txt  taskmaster_state.json
.recovery/emergency_procedures/: emergency_contacts.txt
.taskmaster/: state.json
.uckn/knowledge/chroma_db/: chroma.sqlite3
.uckn/storage/: chroma.sqlite3
deployments/pytest-analyzer/: deployment.yaml
docs/: FAQ.md  INTERACTIVE_EXAMPLES.md  MIGRATION_TROUBLESHOOTING.md  PIXI_INTEGRATION.md  POSTGRESQL_SETUP.md  SYSTEM_DESIGN.md  UV_INTEGRATION.md  api-reference.md  authentication.md  installation.md  performance_optimizations.md  version.json
docs/multimedia/: demos.md  video-tutorials.md
examples/basic-setup/: README.md
framework/bridge/: __init__.py  unified_interface.py
framework/commands/: knowledge_capture.md  knowledge_integrated_ci.md  knowledge_retrieve.md
framework/core/: knowledge_manager.py  query_processor.py  search_ranking.py  semantic_search.py
framework/templates/: session_template.json
scripts/: mcp-server-uv.py  setup-postgresql.sh  setup-uv-integration.py  test_enhanced_semantic_search.py  test_semantic_search_integration.py  validate_atomic_design.py
src/.mypy_cache/: missing_stubs
src/.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  (+272 more)
src/.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  (+264 more)
src/uckn/: __init__.py  cli.py  core.py  core_legacy.py.bak  http_server.py  server.py
src/uckn/api/: __init__.py  dependencies.py  main.py  settings.py
src/uckn/bridge/: unified_interface.py
src/uckn/core/: __init__.py  ml_environment_manager.py  semantic_search.py  semantic_search_enhanced.py
src/uckn/feature_flags/: flag_configuration_template.py
src/uckn/mcp/: __init__.py  server.py  tools.py  universal_knowledge_server.py
src/uckn/performance/: __init__.py  analytics.py  async_processor.py  batch_optimizer.py  cache_manager.py  config.py  db_optimizer.py  (+1 more)
tests/: __init__.py  conftest.py  test_chromadb_storage.py  test_semantic_search.py  test_semantic_search_enhanced.py  test_semantic_search_simple.py  test_unified_interface.py
tests/benchmarks/: test_performance_benchmarks.py  test_performance_optimizations.py
tests/e2e/: test_e2e_basic_workflow.py  test_e2e_knowledge_lifecycle.py
tests/fixtures/: __init__.py  component_fixtures.py  database_fixtures.py  error_fixtures.py  pattern_fixtures.py  tech_stack_fixtures.py
tests/integration/: test_api_integration.py  test_auth_flow.py  test_centralized_architecture.py  test_knowledge_manager_integration.py  test_performance_integration.py
tests/load_tests/: README.md  __init__.py  locustfile.py
tests/quality_metrics/: README.md  __init__.py  coverage_analysis.py  quality_dashboard.py  test_metrics.py
tests/templates/: test_flag_configuration_template.py
web/public/: index.html
web/src/: App.tsx
(+21745 files in other folders)
