[project]
name = "uckn-framework"
version = "1.0.0"
description = "Universal Claude Code Knowledge Network (UCKN) - AI-powered development knowledge management framework"
authors = [
    {name = "Claude Code Community", email = "noreply@anthropic.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
keywords = ["ai", "knowledge-management", "ci-cd", "development", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Quality Assurance",
]
# 🚨 CRITICAL: All dependencies managed through pixi features to avoid conda/PyPI conflicts
dependencies = []

# All dependencies now managed through pixi features - see [tool.pixi.feature.*] sections
[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/MementoRC/claude-code-knowledge-framework"
Documentation = "https://github.com/MementoRC/claude-code-knowledge-framework/docs"
Repository = "https://github.com/MementoRC/claude-code-knowledge-framework"
Issues = "https://github.com/MementoRC/claude-code-knowledge-framework/issues"
Changelog = "https://github.com/MementoRC/claude-code-knowledge-framework/blob/main/CHANGELOG.md"

[project.scripts]
uckn = "uckn.cli:main"
uckn-server = "uckn.server:main"
uckn-migrate = "uckn.migrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uckn"]
exclude = [
    ".claude",
    ".claude/**",
    ".cursor",
    ".cursor/**",
    "*.tmp",
    "*.temp"
]

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude",
    ".claude/**",
    ".cursor",
    ".cursor/**",
    "*.tmp",
    "*.temp",
    ".uckn"
]

[tool.pixi.project]
channels = ["conda-forge", "pytorch"]
platforms = ["linux-64"]  # 🚨 CRITICAL: Linux-only for fastest dependency resolution
channel-priority = "disabled"  # Faster dependency resolution (unified template pattern)

# Ensure proper environment isolation (CI Framework pattern)
[tool.pixi.activation]
env = { PYTHONNOUSERSITE = "1" }

[tool.pixi.dependencies]
python = ">=3.12"
# pip removed to avoid conda/PyPI conflicts - using pure conda packages
pytest-benchmark = ">=5.1.0,<6"

[tool.pixi.pypi-dependencies]
uckn-framework = {path = ".", editable = true}
# 🚨 CRITICAL: Only framework itself as PyPI dependency to avoid conda/PyPI conflicts

# TIER 1: Essential Quality Gates (ZERO-TOLERANCE)
[tool.pixi.feature.quality.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=4.0.0"
pytest-timeout = ">=2.1.0"
pytest-asyncio = ">=0.21.0"
ruff = ">=0.7.3"
mypy = ">=1.0.0"
types-psutil = "*"
# Essential formatting tools (moved from project dependencies to avoid conflicts)
black = ">=23.0.0"
isort = ">=5.12.0"

# Core Runtime Dependencies (CI-optimized minimal set)
[tool.pixi.feature.core.dependencies]
# Essential dependencies only - minimal for CI performance
fastapi = ">=0.100.0,<1.0.0"
uvicorn = ">=0.20.0,<1.0.0"
pydantic = ">=2.0.0,<3.0.0"
numpy = ">=1.21.0,<2.0.0"
pandas = ">=1.5.0,<3.0.0"
httpx = ">=0.24.0,<1.0.0"
aiohttp = ">=3.8.0,<4.0.0"
toml = ">=0.10.0"
click = ">=8.0.0,<9.0.0"
rich = ">=13.0.0,<14.0.0"
jinja2 = ">=3.0.0,<4.0.0"
psutil = ">=5.9.0,<6.0.0"
sqlalchemy = ">=2.0.0,<3.0.0"
psycopg = ">=3.1.0,<4.0.0"
alembic = ">=1.12.0,<2.0.0"
pytest-timeout = ">=2.1.0"  # 🚨 CRITICAL FIX: Required for CI timeout support
# gitpython moved to dev feature to reduce core dependencies

# TIER 2: Extended Quality & Security
[tool.pixi.feature.quality-extended.dependencies]
bandit = ">=1.7.0"
safety = ">=2.3.0,<3.0.0"
pre-commit = ">=3.0.0"
hypothesis = ">=6.0.0"
diff-cover = ">=7.5.0"
pytest-benchmark = ">=5.1.0,<6"

# TIER 3: CI/CD & Build Tools
[tool.pixi.feature.quality-ci.dependencies]
python-build = ">=1.0.0"
twine = ">=4.0.0"
coverage = ">=7.0.0"
pytest-timeout = ">=2.1.0"  # 🚨 CRITICAL FIX: Required for CI timeout support

# Development Tools (specialized)
[tool.pixi.feature.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-asyncio = ">=0.21.0"
pytest-benchmark = ">=4.0.0"
pytest-html = ">=4.0.0"
pytest-json-report = ">=1.5.0"
pytest-xdist = ">=3.3.1"
pytest-metadata = ">=3.0.0"
pytest-github-actions-annotate-failures = ">=0.2.0"
pytest-timeout = ">=2.1.0"
diff-cover = ">=7.5.0"
coverage = ">=7.4.0"
coverage-badge = ">=1.1.0"
pytest-md = ">=0.2.0"
memory_profiler = ">=0.61.0"
ruff = ">=0.1.0"
black = ">=23.0.0"
mypy = ">=1.0.0"
pre-commit = ">=3.0.0"
alembic = ">=1.12.0"
gitpython = ">=3.1.0,<4.0.0"  # Moved from core for CI optimization

# Load Testing Dependencies (specialized)
[tool.pixi.feature.loadtest.dependencies]
locust = ">=2.22.0"
psutil = ">=5.9.0"
requests = ">=2.31.0"

[tool.pixi.feature.mcp.dependencies]
nodejs = ">=18"
pnpm = "*"
mcp = ">=1.9.0"
websockets = ">=11.0.0"
anyio = ">=3.6.0"

[tool.pixi.feature.ml.dependencies]
# ML dependencies - lightweight for CI compatibility
scikit-learn = ">=1.3.0,<2.0.0"
matplotlib = ">=3.5.0,<4.0.0"
seaborn = ">=0.11.0,<1.0.0"

# Heavy ML/Data dependencies - separate feature for optional loading
[tool.pixi.feature.ml-heavy.dependencies]
# Heavy ML/Data dependencies (only load when needed)
pyarrow = ">=14.0.0,<21.0.0"  # Ensure PyExtensionType compatibility
datasets = ">=2.12.0,<3.0.0"
sentence-transformers = ">=2.2.0,<3.0.0"
chromadb = ">=0.4.0,<1.0.0"
redis-py = ">=4.0.0,<5.0.0"
pytorch = "*"  # Moved here for optional use
transformers = ">=4.20.0,<5.0.0"  # Moved here for optional use

# Documentation Dependencies
[tool.pixi.feature.docs.dependencies]
mkdocs = ">=1.5.0"
mkdocs-material = ">=9.0.0"
mkdocstrings = ">=0.20.0"

[tool.pixi.environments]
# CI-optimized environments (reduced package counts for faster installs)
default = {features = ["core"], solve-group = "default"}
dev = {features = ["core", "quality", "dev"], solve-group = "default"}
ci = {features = ["core", "quality", "quality-ci"], solve-group = "default"}  # Enhanced with full testing support
docs = {features = ["core", "docs"], solve-group = "default"}
quality = {features = ["core", "quality"], solve-group = "default"}
quality-extended = {features = ["core", "quality", "quality-extended"], solve-group = "default"}
loadtest = {features = ["core", "loadtest"], solve-group = "default"}
# Full environments (use only when needed - heavy dependencies)
dev-full = {features = ["core", "dev", "ml", "ml-heavy", "mcp"], solve-group = "default"}  # All features
ci-full = {features = ["core", "dev", "mcp", "quality-ci"], solve-group = "default"}  # CI with MCP
ml-full = {features = ["core", "ml", "ml-heavy"], solve-group = "default"}  # All ML dependencies

[tool.pixi.tasks]
# Development tasks (STRICT COMPLIANCE: Use pip module with python)
install = "python -m pip install -e ."
install-editable = "python -m pip install -e ."
dev-setup = "python -m pip install -e ."

# TIER 1: Core Quality Gates (ZERO-TOLERANCE)
test = { cmd = "pixi run -e quality pytest tests/ -v -x", env = { CLAUDECODE = "0" } }
test-fast = { cmd = "pixi run -e quality pytest tests/unit/ -v --maxfail=5", env = { CLAUDECODE = "0" } }
test-cov = { cmd = "pixi run -e quality pytest tests/ --cov=src/uckn --cov-report=html --cov-report=term --cov-report=xml --cov-report=json", env = { CLAUDECODE = "0" } }
lint = "ruff check src/ tests/ --select=F,E9"
lint-fix = "ruff check --fix src/ tests/"
format = "ruff format src/ tests/"
typecheck = { cmd = "cd src && mypy uckn", env = { MYPYPATH = "." } }

# Pre-commit Integration (CRITICAL for AG commands)
pre-commit = { cmd = "pre-commit run --all-files", env = { CLAUDECODE = "0", PRE_COMMIT = "1" } }
install-pre-commit = { cmd = "pre-commit install --install-hooks", env = { CLAUDECODE = "0" } }

# Combined Quality Check (MANDATORY BEFORE COMMIT)
quality = { depends-on = ["test", "lint", "typecheck"] }

# Quality Gate (CI-specific comprehensive check)
quality-gate = { cmd = "pixi run -e quality test && pixi run lint && pixi run typecheck", env = { CLAUDECODE = "0" } }

# Development setup task
dev = { cmd = "pixi run install-editable", env = { CLAUDECODE = "0" } }

# Coverage tasks for CI
coverage-markdown = { cmd = "coverage report --format=markdown > coverage.md", env = { CLAUDECODE = "0" } }
coverage-trend = { cmd = "echo 'Coverage trend analysis - placeholder for future implementation'", env = { CLAUDECODE = "0" } }

# Emergency Quality Fix (for CI failures)
emergency-fix = "ruff check --fix src/ tests/ && ruff format src/ tests/ && pytest tests/ -v"

# TIER 2: Security & Compliance Tasks
security-scan = "bandit -r src/ --severity-level high"
safety-check = "safety check --continue-on-error --short-report"
safety-check-ci = "safety check --continue-on-error --short-report --exit-code || echo 'Safety check completed with warnings'"
static-analysis = { depends-on = ["security-scan", "safety-check"] }
diff-cover = { cmd = "diff-cover coverage.xml", env = { CLAUDECODE = "0" } }

# TIER 3: Complete Validation Pipeline (CRITICAL for AG commands)
check-all = { depends-on = ["quality", "static-analysis"] }

# CI-specific tasks (optimized for CI environments)
ci-test = { cmd = "pixi run -e ci pytest tests/ --cov=src/uckn --cov-report=xml -m 'not slow and not benchmark' --maxfail=3 -x --tb=short", env = { CLAUDECODE = "0", ENVIRONMENT = "ci", CI = "1" } }
ci-test-coverage = { cmd = "pixi run -e ci pytest tests/unit tests/integration --cov=src/uckn --cov-report=json --cov-report=term --maxfail=3 --tb=short", env = { CLAUDECODE = "0", ENVIRONMENT = "ci", CI = "1" } }
ci-lint = { cmd = "pixi run -e quality ruff check src/ tests/ --output-format=github --select=F,E9", env = { CLAUDECODE = "0" } }
ci-format-check = { cmd = "pixi run -e quality ruff format --check src/ tests/", env = { CLAUDECODE = "0" } }

# Framework tasks
start-server = "python -m uckn.server"
analyze-project = "uckn analyze ."
migrate-patterns = "uckn migrate --source .claude/knowledge"
init-project = "uckn init --template python-ml"
db-migrate = "alembic -c src/uckn/storage/migrations/alembic.ini upgrade head" # Added for DB migrations

# Framework tasks with explicit environment (for CI)
uckn-version = "uckn --version"
test-framework = "uckn --version"

# Documentation
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

# MCP Server tasks
mcp-server = { cmd = "python -m uckn.mcp.universal_knowledge_server", env = { PYTHONPATH = "src" } }

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["F401", "F811", "F403"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--timeout=120",  # 2 minutes per test (optimized for CI)
    "--timeout-method=thread",  # More robust for async/code with subprocesses
]
# CI-specific configuration removed - using standard configuration with runtime environment detection
timeout = 120  # 2 minutes default timeout for all tests (pytest-timeout)
timeout_method = "thread"
markers = [
    "unit: Unit tests (fast, <30s timeout)",
    "integration: Integration tests (medium, <120s timeout)",
    "e2e: End-to-end tests (slow, <300s timeout)",
    "slow: Slow tests (extended timeout) - skipped in CI",
    "benchmark: Performance benchmark tests (no timeout) - skipped in CI",
    "asyncio: Async tests using pytest-asyncio plugin",
    "memory_intensive: Memory-intensive tests - reduced scope in CI",
    "external_deps: Tests requiring external dependencies - may be skipped",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# 🚨 CRITICAL FIX: Enable pytest-asyncio for async API testing
[tool.pytest_asyncio]
asyncio_mode = "auto"  # Automatically detect and run async tests

[tool.pytest.benchmark]
disable = false
min_rounds = 5
max_time = 60
min_time = 0.01
sort = "mean"
group_by = "group"
columns = ["mean", "stddev", "rounds", "min", "max"]
histogram = true
save_data = true

[tool.coverage.run]
source = ["src/uckn"]
branch = true
parallel = true
# context = ${CONTEXT}
omit = [
    "tests/*",
    "src/uckn/__main__.py",
]
# dynamic_context = test_function

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
precision = 2
fail_under = 90

[tool.coverage.html]
directory = "htmlcov"
title = "UCKN Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"

[tool.coverage.markdown]
output = "coverage.md"

[tool.coverage.paths]
source = [
    "src/uckn",
    "*/src/uckn"
]

[tool.coverage.differential]
compare_branch = "main"
fail_under = 90
