# pixi has been configured for this project but is not activated
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uckn"
authors = [{name = "UCKN Team"}]
description = "Universal Cloud Knowledge Navigator - AI-Powered Code and Error Solution Framework"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    # Core dependencies
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    # Data processing
    "sqlalchemy>=2.0.0",
    "alembic>=1.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Feature flags and configuration
    "python-dotenv>=1.0.0",
    # Async support
    "aiofiles>=23.0.0",
    "httpx>=0.24.0",
    # For MCP server protocol
    "mcp>=1.0.0",
    # OpenAI for embeddings (optional)
    "openai>=1.0.0",
]

[project.optional-dependencies]
# Heavy ML dependencies (only install when needed)
ml = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0,<3.0.0",
    "transformers>=4.21.0,<5.0.0",
    "torch>=2.0.0,<3.0.0",
    "torchvision>=0.15.0,<1.0.0",
    "Pillow>=10.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]
# Additional ML heavy components (install only for full ML functionality)
ml-heavy = [
    "tensorflow>=2.13.0,<3.0.0",
    "keras>=2.13.0,<3.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]
# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "types-aiofiles>=23.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.290",
    "pre-commit>=3.0.0",
]
# Quality assurance tools
quality = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-benchmark>=5.1.0,<6",
    "mypy>=1.5.0",
    "ruff>=0.0.290",
    "bandit>=1.7.5",
    "safety>=3.0.0",
    "types-requests>=2.31.0",
    "types-aiofiles>=23.0.0",
]
# Extended quality tools (for comprehensive analysis)
quality-extended = [
    "vulture>=2.7",  # Dead code detection
    "xenon>=0.9.0",  # Complexity analysis
    "radon>=6.0.0",  # Code metrics
    "interrogate>=1.5.0",  # Documentation coverage
    "semgrep>=1.35.0",  # Static analysis security
    "prospector>=1.10.0",  # Multi-tool analysis
]
# CI-specific quality tools (optimized for CI environments)
quality-ci = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",  # 🚨 CRITICAL FIX: Required for CI timeout support
    "pytest-benchmark>=5.1.0,<6",
    "mypy>=1.5.0",
    "ruff>=0.0.290",
    "coverage[toml]>=7.3.0",
]
# MCP Server Support
mcp = [
    "mcp>=1.0.0",
    "click>=8.0.0",
    "typing-extensions>=4.0.0",
]
# Load testing dependencies
loadtest = [
    "locust>=2.15.0",
    "pytest-benchmark>=5.1.0,<6",
    "memory-profiler>=0.60.0",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/MementoRC/claude-code-knowledge-framework"
Repository = "https://github.com/MementoRC/claude-code-knowledge-framework"
Issues = "https://github.com/MementoRC/claude-code-knowledge-framework/issues"
Documentation = "https://github.com/MementoRC/claude-code-knowledge-framework/docs"

[project.scripts]
uckn = "uckn.cli:main"
uckn-server = "uckn.server:main"

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>.*)"

[tool.hatch.build]
include = ["src/uckn"]
exclude = ["*.pyc", "__pycache__"]

[tool.hatch.build.targets.wheel]
packages = ["src/uckn"]

[tool.hatch.build.targets.sdist]
include = ["src/uckn", "tests", "pyproject.toml", "README.md"]

[tool.pixi.project]
channels = ["conda-forge", "pytorch", "nvidia"]
platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]

# NO pypi-dependencies - all dependencies come from conda-forge only
# The package is installed separately via pip install -e . after pixi install

[tool.pixi.feature.core.dependencies]
# System dependencies
python = "3.12.*"
# Core runtime dependencies (MINIMAL SET)
pip = "*"
# CLI and development utilities
git = "*"

[tool.pixi.environments]
# All environments use only conda-forge dependencies (core feature)
# Additional Python packages are installed via pip after pixi install
default = {features = ["core"], solve-group = "default"}
dev = {features = ["core"], solve-group = "default"}
ci = {features = ["core"], solve-group = "default"}
docs = {features = ["core"], solve-group = "default"}
quality = {features = ["core"], solve-group = "default"}
quality-extended = {features = ["core"], solve-group = "default"}

[tool.pixi.tasks]
# Development tasks (STRICT COMPLIANCE: Use pip module with python)
install = "python -m pip install -e ."
install-editable = "python -m pip install -e ."
dev-setup = "python -m pip install -e ."

# TIER 1: Core Quality Gates (ZERO-TOLERANCE)
test = { cmd = "pixi run -e quality pytest tests/ -v -x", env = { CLAUDECODE = "0" } }
test-fast = { cmd = "pixi run -e quality pytest tests/unit/ -v --maxfail=5", env = { CLAUDECODE = "0" } }
test-cov = { cmd = "pixi run -e quality pytest tests/ --cov=src/uckn --cov-report=html --cov-report=term --cov-report=xml --cov-report=json", env = { CLAUDECODE = "0" } }
lint = "ruff check src/ tests/ --select=F,E9"
lint-fix = "ruff check --fix src/ tests/"
format = "ruff format src/ tests/"
typecheck = { cmd = "cd src && mypy uckn", env = { MYPYPATH = "." } }

# Pre-commit Integration (CRITICAL for AG commands)
pre-commit = { cmd = "pre-commit run --all-files", env = { CLAUDECODE = "0", PRE_COMMIT = "1" } }
install-pre-commit = { cmd = "pre-commit install --install-hooks", env = { CLAUDECODE = "0" } }

# Combined Quality Check (MANDATORY BEFORE COMMIT)
quality = { depends-on = ["test", "lint", "typecheck"] }

# Quality Gate (CI-specific comprehensive check)
quality-gate = { cmd = "pixi run -e quality test && pixi run lint && pixi run typecheck", env = { CLAUDECODE = "0" } }

# Development setup task
dev = { cmd = "pixi run install-editable", env = { CLAUDECODE = "0" } }

# Coverage tasks for CI
coverage-markdown = { cmd = "coverage report --format=markdown > coverage.md", env = { CLAUDECODE = "0" } }
coverage-trend = { cmd = "echo 'Coverage trend analysis - placeholder for future implementation'", env = { CLAUDECODE = "0" } }

# Emergency Quality Fix (for CI failures)
emergency-fix = { cmd = "ruff check --fix src/ tests/ && ruff format src/ tests/ && pytest tests/ -v", env = { CLAUDECODE = "0" } }

# Security scanning
security-scan = { cmd = "bandit -r src/ --severity-level high", env = { CLAUDECODE = "0" } }
safety-check = { cmd = "safety check --continue-on-error --short-report", env = { CLAUDECODE = "0" } }
safety-check-ci = { cmd = "safety check --continue-on-error --short-report --exit-code || echo 'Safety check completed with warnings'", env = { CLAUDECODE = "0" } }

# Extended static analysis
static-analysis = { depends-on = ["lint", "typecheck", "security-scan"] }

# Diff coverage (for PR reviews)
diff-cover = { cmd = "diff-cover coverage.xml", env = { CLAUDECODE = "0" } }

# Complete quality check (CI equivalent)
check-all = { depends-on = ["test-cov", "lint", "typecheck", "safety-check-ci"] }

# CI-specific tasks (optimized for CI environments)
ci-test = { cmd = "pixi run -e ci pytest tests/ --cov=src/uckn --cov-report=xml -m 'not slow and not benchmark' --maxfail=3 -x --tb=short", env = { CLAUDECODE = "0" } }
ci-test-coverage = { cmd = "pixi run -e ci pytest tests/unit tests/integration --cov=src/uckn --cov-report=json --cov-report=term --maxfail=3 --tb=short", env = { CLAUDECODE = "0" } }
ci-lint = { cmd = "pixi run -e quality ruff check src/ tests/ --output-format=github --select=F,E9", env = { CLAUDECODE = "0" } }
ci-format-check = { cmd = "pixi run -e quality ruff format --check src/ tests/", env = { CLAUDECODE = "0" } }

# MCP and Server tasks
start-server = { cmd = "python -m uckn.server", env = { CLAUDECODE = "0" } }
analyze-project = { cmd = "uckn analyze .", env = { CLAUDECODE = "0" } }
migrate-patterns = { cmd = "uckn migrate --source .claude/knowledge", env = { CLAUDECODE = "0" } }
init-project = { cmd = "uckn init --template python-ml", env = { CLAUDECODE = "0" } }

# Database migrations
db-migrate = { cmd = "alembic -c src/uckn/storage/migrations/alembic.ini upgrade head", env = { CLAUDECODE = "0" } }

# Utility commands
uckn-version = { cmd = "uckn --version", env = { CLAUDECODE = "0" } }
test-framework = { cmd = "uckn --version", env = { CLAUDECODE = "0" } }

# Documentation
docs-serve = { cmd = "mkdocs serve", env = { CLAUDECODE = "0" } }
docs-build = { cmd = "mkdocs build", env = { CLAUDECODE = "0" } }

# MCP server standalone
mcp-server = { cmd = "python -m uckn.mcp.universal_knowledge_server", env = { CLAUDECODE = "0" } }

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--timeout-method=thread",  # More robust for async/code with subprocesses
]
# CI-specific configuration removed - using standard configuration with runtime environment detection
timeout = 120  # 2 minutes default timeout for all tests (pytest-timeout)
timeout_method = "thread"
markers = [
    "unit: Unit tests (fast, <30s timeout)",
    "integration: Integration tests (medium, <120s timeout)",
    "e2e: End-to-end tests (slow, <300s timeout)",
    "slow: Slow tests (extended timeout) - skipped in CI",
    "benchmark: Performance benchmark tests (no timeout) - skipped in CI",
    "performance: Performance tests (custom timeout) - may be skipped in CI",
    "asyncio: Async tests using pytest-asyncio plugin",
    "memory_intensive: Memory-intensive tests - reduced scope in CI",
    "external_deps: Tests requiring external dependencies - may be skipped",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# 🚨 CRITICAL FIX: Enable pytest-asyncio for async API testing
[tool.pytest_asyncio]
asyncio_mode = "auto"  # Automatically detect and run async tests

[tool.pytest.benchmark]
disable = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
    "transformers.*",
    "torch.*",
    "torchvision.*",
    "tensorflow.*",
    "sklearn.*",
    "PIL.*",
    "librosa.*",
    "soundfile.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "pandas.*",
    "numpy.*",
    "mcp.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/uckn"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
    "*/.pixi/*",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "except ImportError:",
    "pass",
    "\\.\\.\\.",
]
ignore_errors = true
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
title = "UCKN Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"

[tool.coverage.markdown]
output = "coverage.md"

[tool.coverage.paths]
source = [
    "src/uckn",
    "*/src/uckn"
]

[tool.coverage.differential]
compare_branch = "main"
fail_under = 90
