# pixi has been configured for this project but is not activated
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uckn"
authors = [{name = "UCKN Team"}]
description = "Universal Cloud Knowledge Navigator - AI-Powered Code and Error Solution Framework"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    # Data processing
    "sqlalchemy>=2.0.0",
    "alembic>=1.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Feature flags and configuration
    "python-dotenv>=1.0.0",
    # Async support
    "aiofiles>=23.0.0",
    "httpx>=0.24.0",
    # For MCP server protocol
    "mcp>=1.0.0",
    # OpenAI for embeddings (optional)
    "openai>=1.0.0",
]

[project.optional-dependencies]
# Heavy ML dependencies (only install when needed)
ml = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0,<3.0.0",
    "transformers>=4.21.0,<5.0.0",
    "torch>=2.0.0,<3.0.0",
    "torchvision>=0.15.0,<1.0.0",
    "Pillow>=10.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]
# Additional ML heavy components (install only for full ML functionality)
ml-heavy = [
    "tensorflow>=2.13.0,<3.0.0",
    "keras>=2.13.0,<3.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]
# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "types-aiofiles>=23.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.290",
    "pre-commit>=3.0.0",
]
# Quality assurance tools
quality = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-benchmark>=5.1.0,<6",
    "mypy>=1.5.0",
    "ruff>=0.0.290",
    "bandit>=1.7.5",
    "safety>=3.0.0",
    "types-requests>=2.31.0",
    "types-aiofiles>=23.0.0",
]
# Extended quality tools (for comprehensive analysis) - pip only, not pixi
quality-extended = [
    "vulture>=2.7",  # Dead code detection
    "xenon>=0.9.0",  # Complexity analysis
    "radon>=6.0.0",  # Code metrics
]
# CI-specific quality tools (optimized for CI environments)
quality-ci = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",  # 🚨 CRITICAL FIX: Required for CI timeout support
    "pytest-benchmark>=5.1.0,<6",
    "mypy>=1.5.0",
    "ruff>=0.0.290",
    "coverage[toml]>=7.3.0",
]
# MCP Server Support
mcp = [
    "mcp>=1.0.0",
    "click>=8.0.0",
    "typing-extensions>=4.0.0",
]
# Load testing dependencies
loadtest = [
    "locust>=2.15.0",
    "pytest-benchmark>=5.1.0,<6",
    "memory-profiler>=0.60.0",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/MementoRC/claude-code-knowledge-framework"
Repository = "https://github.com/MementoRC/claude-code-knowledge-framework"
Issues = "https://github.com/MementoRC/claude-code-knowledge-framework/issues"
Documentation = "https://github.com/MementoRC/claude-code-knowledge-framework/docs"

[project.scripts]
uckn = "uckn.cli:main"
uckn-server = "uckn.server:main"

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>.*)"

[tool.hatch.build]
include = ["src/uckn"]
exclude = ["*.pyc", "__pycache__"]

[tool.hatch.build.targets.wheel]
packages = ["src/uckn"]

[tool.hatch.build.targets.sdist]
include = ["src/uckn", "tests", "pyproject.toml", "README.md"]

[tool.pixi.project]
channels = ["conda-forge", "pytorch", "nvidia", "dnachun"]
platforms = ["linux-64"]

# NO pypi-dependencies - all dependencies come from conda-forge only
# The package is installed separately via pip install -e . after pixi install

[tool.pixi.feature.core.dependencies]
# System dependencies
python = "3.12.*"
pip = "*"
git = "*"

[tool.pixi.feature.quality.dependencies]
# Quality tools from conda-forge
pytest = ">=8.0.0"
pytest-cov = ">=4.0.0"
pytest-asyncio = ">=0.21.0"
pytest-timeout = ">=2.1.0"
pytest-benchmark = ">=4.0.0"
mypy = ">=1.5.0"
ruff = ">=0.0.290"
coverage = ">=7.3.0"
# Build tools for ci-framework compatibility
python-build = ">=1.0.0"
twine = ">=4.0.0"

[tool.pixi.feature.quality-extended.dependencies]
# Extended quality tools from conda-forge/dnachun
bandit = ">=1.7.5"
vulture = ">=2.7"
radon = ">=6.0.0"
interrogate = ">=1.5.0"
prospector = ">=1.10.0"
# NOTE: semgrep moved to separate environment (requires Python 3.11)

[tool.pixi.feature.semgrep.dependencies]
# Semgrep requires Python 3.11 (incompatible with 3.12)
python = "3.11.*"
semgrep = ">=1.35.0"

[tool.pixi.feature.dev.dependencies]
# Development tools from conda-forge
black = ">=23.0.0"
isort = ">=5.12.0"
pre-commit = ">=3.0.0"

[tool.pixi.feature.loadtest.dependencies]
# Load testing from conda-forge
locust = ">=2.15.0"

[tool.pixi.feature.docs.dependencies]
# Documentation from conda-forge
mkdocs = ">=1.5.0"
mkdocs-material = ">=9.0.0"

[tool.pixi.environments]
# All dependencies from conda-forge only
default = {features = ["core"], solve-group = "default"}
dev = {features = ["core", "quality", "dev"], solve-group = "default"}
ci = {features = ["core", "quality"], solve-group = "default"}
quality = {features = ["core", "quality"], solve-group = "default"}
quality-ci = {features = ["core", "quality"], solve-group = "default"}  # Alias for ci-framework compatibility
quality-extended = {features = ["core", "quality", "quality-extended"], solve-group = "default"}
loadtest = {features = ["core", "loadtest"], solve-group = "default"}
docs = {features = ["core", "docs"], solve-group = "default"}
# Semgrep requires Python 3.11 - separate solve-group
semgrep = {features = ["semgrep"], solve-group = "semgrep"}

[tool.pixi.tasks]
# Development tasks (STRICT COMPLIANCE: Use pip module with python)
install = "python -m pip install -e ."
install-editable = "python -m pip install -e ."
dev-setup = "python -m pip install -e ."

# TIER 1: Core Quality Gates (ZERO-TOLERANCE)
# Note: exclude external_deps and benchmark tests via addopts in pytest config
test = "pytest tests/ -v -x"
test-fast = "pytest tests/unit/ -v --maxfail=5"
test-cov = "pytest tests/ --cov=src/uckn --cov-report=html --cov-report=term --cov-report=xml --cov-report=json -m 'not external_deps and not benchmark'"
test-all = "pytest tests/ -v"
lint = "ruff check src/ tests/ --select=F,E9"
lint-fix = "ruff check --fix src/ tests/"
format = "ruff format src/ tests/"
format-check = "ruff format --check src/ tests/"
typecheck = "mypy src/uckn"

# Pre-commit Integration (CRITICAL for AG commands)
pre-commit = { cmd = "pre-commit run --all-files", env = { CLAUDECODE = "0", PRE_COMMIT = "1" } }
install-pre-commit = { cmd = "pre-commit install --install-hooks", env = { CLAUDECODE = "0" } }

# Combined Quality Check (MANDATORY BEFORE COMMIT)
quality = { depends-on = ["test", "lint", "typecheck"] }

# Quality Gate (CI-specific comprehensive check)
quality-gate = { depends-on = ["test", "lint", "typecheck"] }

# Development setup task
dev = "python -m pip install -e ."

# Build task for ci-framework compatibility
build = "python -m build"

# Coverage tasks for CI
coverage-markdown = { cmd = "coverage report --format=markdown > coverage.md", env = { CLAUDECODE = "0" } }
coverage-trend = { cmd = "echo 'Coverage trend analysis - placeholder for future implementation'", env = { CLAUDECODE = "0" } }

# Emergency Quality Fix (for CI failures)
emergency-fix = { cmd = "ruff check --fix src/ tests/ && ruff format src/ tests/ && pytest tests/ -v", env = { CLAUDECODE = "0" } }

# Security scanning
security-scan = { cmd = "bandit -r src/ --severity-level high", env = { CLAUDECODE = "0" } }
safety-check = { cmd = "safety check --continue-on-error --short-report", env = { CLAUDECODE = "0" } }
safety-check-ci = { cmd = "safety check --continue-on-error --short-report --exit-code || echo 'Safety check completed with warnings'", env = { CLAUDECODE = "0" } }

# Extended static analysis
static-analysis = { depends-on = ["lint", "typecheck", "security-scan"] }

# Diff coverage (for PR reviews)
diff-cover = { cmd = "diff-cover coverage.xml", env = { CLAUDECODE = "0" } }

# Complete quality check (CI equivalent)
check-all = { depends-on = ["test-cov", "lint", "typecheck", "safety-check-ci"] }

# CI-specific tasks (optimized for CI environments)
ci-test = { cmd = "pytest tests/ --cov=src/uckn --cov-report=xml -m 'not slow and not benchmark' --maxfail=3 -x --tb=short", env = { CLAUDECODE = "0", ENVIRONMENT = "ci" } }
ci-test-coverage = { cmd = "pytest tests/unit tests/integration --cov=src/uckn --cov-report=json --cov-report=term --maxfail=3 --tb=short", env = { CLAUDECODE = "0", ENVIRONMENT = "ci" } }
ci-lint = { cmd = "ruff check src/ tests/ --output-format=github --select=F,E9", env = { CLAUDECODE = "0" } }
ci-format-check = { cmd = "ruff format --check src/ tests/", env = { CLAUDECODE = "0" } }

# MCP and Server tasks
start-server = { cmd = "python -m uckn.server", env = { CLAUDECODE = "0" } }
analyze-project = { cmd = "uckn analyze .", env = { CLAUDECODE = "0" } }
migrate-patterns = { cmd = "uckn migrate --source .claude/knowledge", env = { CLAUDECODE = "0" } }
init-project = { cmd = "uckn init --template python-ml", env = { CLAUDECODE = "0" } }

# Database migrations
db-migrate = { cmd = "alembic -c src/uckn/storage/migrations/alembic.ini upgrade head", env = { CLAUDECODE = "0" } }

# Utility commands
uckn-version = { cmd = "uckn --version", env = { CLAUDECODE = "0" } }
test-framework = { cmd = "uckn --version", env = { CLAUDECODE = "0" } }

# Documentation
docs-serve = { cmd = "mkdocs serve", env = { CLAUDECODE = "0" } }
docs-build = { cmd = "mkdocs build", env = { CLAUDECODE = "0" } }

# MCP server standalone
mcp-server = { cmd = "python -m uckn.mcp.universal_knowledge_server", env = { CLAUDECODE = "0" } }

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]  # Enable import of uckn package without installation
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--timeout-method=thread",  # More robust for async/code with subprocesses
    "-m", "not external_deps and not benchmark",  # Exclude tests requiring external deps
]
# CI-specific configuration removed - using standard configuration with runtime environment detection
timeout = 120  # 2 minutes default timeout for all tests (pytest-timeout)
timeout_method = "thread"
markers = [
    "unit: Unit tests (fast, <30s timeout)",
    "integration: Integration tests (medium, <120s timeout)",
    "e2e: End-to-end tests (slow, <300s timeout)",
    "slow: Slow tests (extended timeout) - skipped in CI",
    "benchmark: Performance benchmark tests (no timeout) - skipped in CI",
    "performance: Performance tests (custom timeout) - may be skipped in CI",
    "asyncio: Async tests using pytest-asyncio plugin",
    "memory_intensive: Memory-intensive tests - reduced scope in CI",
    "external_deps: Tests requiring external dependencies - may be skipped",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# 🚨 CRITICAL FIX: Enable pytest-asyncio for async API testing
[tool.pytest_asyncio]
asyncio_mode = "auto"  # Automatically detect and run async tests

# pytest-benchmark settings moved to conftest.py or CLI args
# [tool.pytest.benchmark] removed - conflicts with [tool.pytest.ini_options]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["F", "E9"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Allow star imports in conftest.py for pytest fixtures
"tests/conftest.py" = ["F403", "F405"]
"tests/**/conftest.py" = ["F403", "F405"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false  # Too noisy with external libs returning Any
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Prevents issues when fixing types
warn_no_return = true
warn_unreachable = false  # Too noisy with conditional imports
strict_equality = false  # Enum comparisons cause false positives

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
    "transformers.*",
    "torch.*",
    "torchvision.*",
    "tensorflow.*",
    "sklearn.*",
    "PIL.*",
    "librosa.*",
    "soundfile.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "pandas.*",
    "numpy.*",
    "mcp.*",
    "psutil.*",
    "locust.*",
    "alembic.*",
    "uvicorn.*",
    "nltk.*",
    "httpx.*",
    "redis.*",
    "aiohttp.*",
]
ignore_missing_imports = true

# SQLAlchemy models have complex typing - relax for these modules
[[tool.mypy.overrides]]
module = [
    "uckn.storage.*",
]
disable_error_code = ["misc", "valid-type", "assignment", "attr-defined", "dict-item", "union-attr", "var-annotated", "arg-type", "operator", "index"]

# MCP server has complex typing with external lib + mock patterns
[[tool.mypy.overrides]]
module = "uckn.mcp.*"
disable_error_code = ["return-value", "arg-type", "assignment", "attr-defined", "union-attr", "operator"]

# Core modules with optional ML dependencies and complex patterns
[[tool.mypy.overrides]]
module = [
    "uckn.core.*",
    "uckn.server",
]
disable_error_code = ["union-attr", "attr-defined", "assignment", "arg-type", "var-annotated", "operator", "index", "call-arg", "dict-item", "list-item", "misc", "truthy-function", "syntax", "no-redef"]

# API routers have Pydantic model complexities
[[tool.mypy.overrides]]
module = [
    "uckn.api.*",
]
disable_error_code = ["arg-type", "assignment", "call-arg", "misc", "var-annotated", "dict-item", "union-attr", "call-overload", "typeddict-unknown-key"]

# Performance, sync, bridge modules
[[tool.mypy.overrides]]
module = [
    "uckn.performance.*",
    "uckn.sync.*",
    "uckn.bridge.*",
]
disable_error_code = ["var-annotated", "arg-type", "assignment", "misc", "list-item", "dict-item", "attr-defined"]

[tool.coverage.run]
source = ["src/uckn"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
    "*/.pixi/*",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "except ImportError:",
    "pass",
    "\\.\\.\\.",
]
ignore_errors = true
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
title = "UCKN Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"

[tool.coverage.markdown]
output = "coverage.md"

[tool.coverage.paths]
source = [
    "src/uckn",
    "*/src/uckn"
]

[tool.coverage.differential]
compare_branch = "main"
fail_under = 90
